2015-07-10 Stefan Bidigaray <stefanbidi@gmail.com>
	* Doxyfile: Adjust documentation options.
	* Documentation/MainPage.dox: Fix typo.

2015-07-10 Stefan Bidigaray <stefanbidi@gmail.com>
	* Doxyfile: Updated.
	* Headers/CoreFoundation/CFArray.h,
	* Headers/CoreFoundation/CFAttributedString.h,
	* Headers/CoreFoundation/CFBag.h,
	* Headers/CoreFoundation/CFBase.h.in,
	* Headers/CoreFoundation/CFBinaryHeap.h,
	* Headers/CoreFoundation/CFBitVector.h,
	* Headers/CoreFoundation/CFByteOrder.h,
	* Headers/CoreFoundation/CFCalendar.h,
	* Headers/CoreFoundation/CFCharacterSet.h,
	* Headers/CoreFoundation/CFData.h,
	* Headers/CoreFoundation/CFDateFormatter.h,
	* Headers/CoreFoundation/CFDate.h,
	* Headers/CoreFoundation/CFDictionary.h,
	* Headers/CoreFoundation/CFError.h,
	* Headers/CoreFoundation/CFLocale.h,
	* Headers/CoreFoundation/CFNumberFormatter.h,
	* Headers/CoreFoundation/CFNumber.h,
	* Headers/CoreFoundation/CFPropertyList.h,
	* Headers/CoreFoundation/CFRunLoop.h,
	* Headers/CoreFoundation/CFRuntime.h,
	* Headers/CoreFoundation/CFSet.h,
	* Headers/CoreFoundation/CFSocket.h,
	* Headers/CoreFoundation/CFStream.h,
	* Headers/CoreFoundation/CFString.h,
	* Headers/CoreFoundation/CFTimeZone.h,
	* Headers/CoreFoundation/CFTree.h,
	* Headers/CoreFoundation/CFURLAccess.h,
	* Headers/CoreFoundation/CFURL.h,
	* Headers/CoreFoundation/CFUUID.h,
	* Headers/CoreFoundation/CFXMLNode.h,
	* Headers/CoreFoundation/CFXMLParser.h,
	* Headers/CoreFoundation/GSCharacter.h: Added/modified documentation.
	* Documentation/CompilingApplications.dox,
	* Documentation/ConfiguringAndCompiling.dox,
	* Documentation/DoxygenLayout.xml,
	* Documentation/ExampleEXUInt32.dox,
	* Documentation/MainPage.dox: Initial documentation pages.
	* Examples/EXUInt32.c,
	* Examples/EXUInt32.h: Added first library usage example.

2015-07-09 Stefan Bidigaray <stefanbidi@gmail.com>
	* Source/config.h.in,
	* configure,
	* configure.ac: Add better checks for features.
